# PrepareEMO

./: .gitignore  README.md  prepare_ser_benchmarks.py  pyproject.toml  requirements.txt
examples/: commands.md
ser_benchmarks/: __init__.py  cli.py  common.py  esd.py  iemocap.py  labels.py  meld.py  msp_improv.py  splits.py
